<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
	<modelVersion>4.0.0</modelVersion>

	<groupId>com.stpl.gtn.gtn2o.ui</groupId>
	<artifactId>GtnFrameworkPriceSchedule</artifactId>
	<version>1</version>
	<packaging>jar</packaging>

	<name>GtnFrameworkPriceSchedule</name>
	<parent>
		<groupId>com.stpl.gtn.gtn2o</groupId>
		<artifactId>GtnModules</artifactId>
		<version>1.0</version>
	</parent>

	<properties>
		<endorsed.dir>${project.build.directory}/endorsed</endorsed.dir>
		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
		<maven.compiler.source>1.8</maven.compiler.source>
		<maven.compiler.target>1.8</maven.compiler.target>
	</properties>

	<dependencies>
		<dependency>
			<groupId>com.stpl.gtn.gtn2o</groupId>
			<artifactId>GtnFrameworkComponentRepository</artifactId>
			<version>${gtnFrameworkComponentRepository.version}</version>
			<scope>provided</scope>
		</dependency>
	</dependencies>
	<build>
		<finalName>${project.artifactId}</finalName>
		<plugins>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-war-plugin</artifactId>
                <version>2.2</version>
                <configuration>
                    <failOnMissingWebXml>false</failOnMissingWebXml>
                    <archive>
                        <manifestEntries>
                            <Dependencies>com.stpl.newarch.shared.library</Dependencies>
                        </manifestEntries>
                    </archive>
                </configuration>
            </plugin>
            </plugins>
	</build>
</project>
